@@ -45,6 +45,7 @@ public class CommandLineOptions {
   private String filename = null;
   private String[] disabledRules = new String[0];
   private String[] enabledRules = new String[0];
+  private boolean useEnabledOnly = false;
 
   public boolean isPrintUsage() {
     return printUsage;
@@ -188,6 +189,14 @@ public class CommandLineOptions {
 
   public void setEnabledRules(String[] enabledRules) {
     this.enabledRules = enabledRules;
+  }
+
+  public boolean getUseEnabledOnly() {
+    return useEnabledOnly;
+  }
+  
+  public void setUseEnabledOnly() {
+    this.useEnabledOnly = true;
   }
 
   public boolean isXmlFiltering() {
