@@ -23,6 +23,8 @@ LanguageTool Change Log
      still exists but has been deprecated)
     -Deprecated some methods whose visibility will be decreased (e.g. from public
      to protected)
+    -Command line: enabling and disabling specific rules at the same time is now allowed.
+	 To disable all the rules except those explicitly enabled, use -eo (--enabledonly). 
 
 
 2.6 (2014-06-30)
